Implement option to position the close button on the left side of tabs

--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -47,8 +47,15 @@
       .octicon(x, @close-icon-size);
       position: absolute;
       top: 1px;
-      right: 10px;
       cursor: default;
+    }
+
+    .close-icon-right {
+      right: 10px;
+    }
+
+    .close-icon-left {
+      left: 10px;
     }
 
     &.modified:hover .close-icon {
